--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "unidirectional-data-flow",
   "version": "0.0.1",
   "description": "Unidirectional Data Flow for Vanilla JavaScript",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsc && vite build --ssr index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,8 @@
   "homepage": "https://github.com/curran/unidirectional-data-flow#readme",
   "devDependencies": {
     "jsdom": "^22.1.0",
-    "vitest": "^0.34.1"
+    "vitest": "^0.34.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
